    it is a local setting only.
  * sync: When some remotes to sync with are specified, and --fast is too,
    pick the lowest cost of the specified remotes, do not sync with a
    faster remote that was not specified.
  * addurl: When run with --fast on an url that 
    annex.security.allowed-ip-addresses prevents accessing, display
    a more useful message.

 -- Joey Hess <id@joeyh.name>  Mon, 30 Mar 2020 15:58:34 -0400

git-annex (8.20200330) upstream; urgency=medium

  * fsck: Fix reversion in 8.20200226 that made it incorrectly warn
    that hashed keys with an extension should be upgraded.
  * add --force-small: Fix a bug that, when adding a symbolic link,
    checked in the content of the file the symlink pointed to.
    Thanks, Kyle Meyer for the patch.
  * add --force-small: Fix failure when passed a modified submodule.
    Thanks, Kyle Meyer for the patch.
  * When syncing changes back from an adjusted branch to the basis branch,
    include changes to submodules.
    Thanks, Kyle Meyer for the patch.
  * webdav: Made exporttree remotes faster by caching connection to the
    server.
  * Fix a minor bug that caused options provided with -c to be passed
    multiple times to git.

 -- Joey Hess <id@joeyh.name>  Mon, 30 Mar 2020 12:14:50 -0400

git-annex (8.20200309) upstream; urgency=medium

  * Fix bug that caused unlocked annexed dotfiles to be added to git by the
    smudge filter when annex.dotfiles was not set.
  * Upgrade other repos than the current one by running git-annex upgrade
    inside them, which avoids problems with upgrade code making assumptions
    that the cwd will be inside the repo being upgraded. In particular,
    this fixes a problem where upgrading a v7 repo to v8 caused an ugly
    git error message.
  * Fix upgrade failure when a file has been deleted from the working tree.
  * Fix regression 1 month ago that prevented external special remotes from
    using GETCONFIG to query values like "name".