@@ -1,0 +1,24 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2020-04-28T17:06:39Z"
+ content="""
+This comes down to this part of preferredRequiredMapsLoad:
+
+	pc <- genmap preferredContentLog =<< groupPreferredContentMapRaw
+	rc <- genmap requiredContentLog M.empty
+
+So for required content, it does not use the group preferred content map.
+
+Should it also use the groupwanted values for required content in this case?
+It kind of makes sense, but I do wonder if someone might have a group that they
+want to use one expression for its preferred content (groupwanted)
+and a different expression for its required content ("grouprequired").
+
+OTOH, I suppose that allowing for the former case now does not prevent
+later adding support for the latter. 
+
+(Also, setting required to "standard" already works, so that's a precident.)
+
+Confirmed that passing the map does fix the behavior, so I'm doing that.
+"""]]
